[package]
name = "malloc_size_of_derive"
version = "1.1.0"
authors = ["The Servo Project Developers", "Thomas Krause <thomaskrause@posteo.de>"]
license = "MIT"
description = "This is a fork of the `malloc_size_of_derive` crate, which is part of the Servo codebase,"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
synstructure = "0.11"
proc-macro2 = "0.4"